# cxxtrace

./: .clang-format  CMakeLists.txt  auto-return-type.comby  tmp
check_rseq/: CMakeLists.txt  capstone.cpp  capstone.h  elf_function.cpp  elf_function.h  libelf.cpp  libelf_support.h  libelf_support_impl.h  machine_code.h  main.cpp  parse_binary.cpp  parse_binary.h  rseq_analyzer.cpp  rseq_analyzer.h
ci/: build-and-test-steps.template.yaml  build-and-test.yaml  build-include-what-you-use.yaml  cache-public-packages.yaml  cxxtrace-ubuntu-19.04-gcc-8.Dockerfile  include-what-you-use.yaml  install-clang-toolchain-steps.template.yaml  install-include-what-you-use-steps.template.yaml  rebuild-docker-images.sh
cmake/: FindCxxtraceStdFilesystem.cmake  FindLibrseq.cmake  cxxtrace_add_compile_error_test.cmake  cxxtrace_check_cxx_source_compiles.cmake  cxxtrace_cotire.cmake
docs/: clock.md  trade-offs.md
example/: CMakeLists.txt  group_and_sort.cpp  group_and_sort_parallel.cpp  small.cpp
lib/: CMakeLists.txt  add.cpp  chrome_trace_event_format.cpp  clock.cpp  clock_extra.cpp  config.cpp  file_descriptor.cpp  iostream.cpp  processor.cpp  real_synchronization.cpp  rseq.cpp  sample.cpp  snapshot.cpp  span.cpp  storage.cpp  testing.cpp  thread.cpp  unbounded_storage.cpp  unbounded_unsafe_storage.cpp
lib/include/cxxtrace/: chrome_trace_event_format.h  clock.h  clock_extra.h  clock_impl.h  config.h  config_impl.h  mpmc_ring_queue_processor_local_storage.h  mpmc_ring_queue_processor_local_storage_impl.h  mpmc_ring_queue_storage.h  mpmc_ring_queue_storage_impl.h  mpsc_ring_queue_processor_local_storage.h  mpsc_ring_queue_processor_local_storage_impl.h  mpsc_ring_queue_storage.h  mpsc_ring_queue_storage_impl.h  ring_queue_storage.h  ring_queue_storage_impl.h  ring_queue_thread_local_storage.h  ring_queue_thread_local_storage_impl.h  ring_queue_unsafe_storage.h  ring_queue_unsafe_storage_impl.h  sample.h  snapshot.h  snapshot_impl.h  span.h  span_impl.h  spmc_ring_queue_processor_local_storage.h  spmc_ring_queue_processor_local_storage_impl.h  spmc_ring_queue_thread_local_storage.h  spmc_ring_queue_thread_local_storage_impl.h  spsc_ring_queue_processor_local_storage.h  spsc_ring_queue_processor_local_storage_impl.h  spsc_ring_queue_thread_local_storage.h  spsc_ring_queue_thread_local_storage_impl.h  storage.h  string.h  testing.h  thread.h  unbounded_storage.h  unbounded_storage_impl.h  unbounded_unsafe_storage.h  (+2 more)
lib/include/cxxtrace/detail/: add.h  apple_commpage.h  atomic.h  atomic_base.h  atomic_ref.h  attribute.h  cdschecker.h  cdschecker_mutex.h  cdschecker_synchronization.h  debug_source_location.h  fickle_lock.h  fickle_lock_impl.h  file_descriptor.h  have.h  iostream.h  lazy_thread_local.h  molecular.h  mpmc_ring_queue.h  mpsc_ring_queue.h  mutex.h  processor.h  processor_local_mpsc_ring_queue.h  queue_sink.h  real_synchronization.h  relacy_synchronization.h  ring_queue.h  rseq.h  sample.h  snapshot_sample.h  spin_lock.h  spmc_ring_queue.h  spsc_ring_queue.h  string.h  thread.h  vector.h  warning.h  workarounds.h
lib/private_include/cxxtrace/detail/: sample.h  storage.h
test/: CMakeLists.txt  benchmark_black_hole.cpp  benchmark_clock.cpp  benchmark_mutex.cpp  benchmark_processor.cpp  benchmark_ring_queue.cpp  benchmark_span.cpp  benchmark_thread.cpp  black_hole.h  cdschecker_allocator.cpp  cdschecker_allocator.h  cdschecker_backoff.h  cdschecker_exhaustive_rng.cpp  cdschecker_exhaustive_rng.h  cdschecker_model_memory_resource.cpp  cdschecker_model_memory_resource.h  cdschecker_mutex.cpp  cdschecker_synchronization.cpp  cdschecker_synchronization.h  cdschecker_thread.cpp  cdschecker_thread.h  cdschecker_thread_local_var.h  compile_error_test.py  concatenated_vectors.h  concurrency_stress.h  concurrency_stress_synchronization.h  concurrency_test_runner.cpp  concurrency_test_runner.h  cxxtrace_algorithm.h  cxxtrace_algorithm_impl.h  cxxtrace_benchmark.cpp  cxxtrace_benchmark.h  cxxtrace_benchmark_impl.h  cxxtrace_concurrency_test.cpp  cxxtrace_concurrency_test.h  cxxtrace_concurrency_test_base.cpp  cxxtrace_concurrency_test_base.h  cxxtrace_concurrency_test_cdschecker.cpp  cxxtrace_concurrency_test_main_cdschecker.cpp  cxxtrace_concurrency_test_main_relacy.cpp  (+76 more)
test/check_rseq/: CMakeLists.txt  README.md  assembler.cpp  assembler.h  is_bytes.h  test_assembler.cpp  test_elf_function.cpp  test_rseq_analyzer.cpp
test/test_processor_id_manual/: CMakeLists.txt  atomic_ref.h  dtrace.cpp  gnuplot.cpp  linux_perf_event.cpp  main.cpp  mmap_mapping.cpp  mmap_mapping.h  sample_checker.cpp  sample_checker.h  test_processor_id_manual.h
test/test_ring_queue/: CMakeLists.txt  index_type_must_be_large_enough.cpp  value_must_have_trivial_type.cpp
tools/: CMakeLists.txt  format
tools/include-what-you-use/: CMakeLists.txt  apple.imp  apply_iwyu.py  c++.imp  glibc.imp  libc++.imp  libstdc++.imp  posix.imp  test_apply_iwyu.py  vendor-benchmark.imp  vendor-cdschecker.imp  vendor-googletest.imp  vendor-nlohmann-json.imp  vendor-relacy.imp
